--- a/src/assets/styles/helpers/_buttons.scss
+++ b/src/assets/styles/helpers/_buttons.scss
@@ -561,6 +561,9 @@ body.sync {
     .js-loading {
       background-color: transparent !important;
       border: 1px $dark-line solid !important;
+      &::before {
+        border-color: $dark-line;
+      }
     }
 
     .disabled {
@@ -663,6 +666,10 @@ body.dark {
   .js-loading {
     background-color: transparent !important;
     border: 1px $dark-line solid !important;
+
+    &::before {
+      border-color: $dark-line;
+    }
   }
 
   .disabled {
